--- a/your_blog/templates/header.html
+++ b/your_blog/templates/header.html
@@ -18,7 +18,7 @@
                     <a class="nav-link" href="#">Archives</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Tags</a>
+                    <a class="nav-link" href="{% url 'article:article_tags' %}">Tags</a>
                 </li>
             </ul>
         </div>
