--- a/your_blog/templates/base.html
+++ b/your_blog/templates/base.html
@@ -15,6 +15,9 @@
             <div class="col-lg-9" style="background-color: white;">
                 {% block content %}{% endblock content %}
             </div>
+            <div class="col-md-3">
+                {% include "panel.html" %}
+            </div>
         </div>
     </div>
     {% include 'footer.html' %}
