--- a/your_blog/templates/base.html
+++ b/your_blog/templates/base.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <html lang="en">
 
 <head>
@@ -6,6 +8,7 @@
     <title>{% block title %}{% endblock title %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/archive.css' %}">
 </head>
 
 <body style="background-color: #f3f6f8;">
