--- a/your_blog/templates/header.html
+++ b/your_blog/templates/header.html
@@ -6,16 +6,16 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <a class="navbar-brand" href="#">Your Blog</a>
+        <a class="navbar-brand" href="{% url 'article:article_list' %}">Your Blog</a>
         <!--Nav list -->
         <div class="collapse navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span
+                    <a class="nav-link" href="{% url 'article:article_list' %}">Home <span
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Archives</a>
+                    <a class="nav-link" href="{% url 'article:article_archives' %}">Archives</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'article:article_tags' %}">Tags</a>
